# messaging_sdk

./: README.md  example.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
src/messaging_sdk/: __init__.py  client.py  exceptions.py  models.py  webhook.py
tests/: test_client.py  test_webhook.py
