[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "messaging_sdk"
version = "1.0.0"
description = "Python SDK for the Messaging API"
readme = "README.md"
authors = [{name = "Your Name", email = "you@example.com"}]
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
]